# howdy

./: .editorconfig  .gitignore  .gitmodules  .stylish-haskell.yaml  CHANGELOG.md  README.md  cabal.project  cabal.project.local  haskell.yml  hie.yaml  howdy.cabal  todo
.github/workflows/: haskell.yml
src/: Howdy.hs
src/Control/: Optics.hs
src/Discord/Application/: Command.hs
src/Discord/Application/Command/: Request.hs
src/Howdy/: Action.hs  Actions.hs  Bot.hs  Command.hs  Context.hs  Discord.hs  Error.hs  Parser.hs  Permission.hs  Reaction.hs  Redis.hs  Secrets.hs  Text.hs
src/Howdy/Builtin/: Help.hs
src/Howdy/Comptime/: Bot.hs  Command.hs  Reaction.hs
src/Howdy/Discord/: Class.hs  Free.hs
src/Howdy/Effects/: Discord.hs  Parse.hs
src/Howdy/Experimental/: Discord.hs
src/Howdy/Internal/: Bot.hs  Builder.hs  Command.hs  Debug.hs  Discord.hs  Error.hs  Global.hs  Help.hs  Lifecycle.hs  Logging.hs  Reaction.hs  Util.hs
src/Howdy/Internal/Action/: Builder.hs  Command.hs  Run.hs  RunFree.hs
src/Howdy/Internal/Bot/: Builder.hs  CommandManager.hs  Debug.hs  Lifecycle.hs  ReactionManager.hs  Run.hs
src/Howdy/Internal/Logging/: Fmt.hs
src/Howdy/Internal/Manager/: Command.hs  Reaction.hs
src/Howdy/Internal/Parser/: Class.hs  Cons.hs  ConsR.hs  Trans.hs  TransR.hs  Types.hs
src/Howdy/Parser/: Class.hs  Trans.hs  Types.hs
test/Examples/: Api.hs
test/Howdy/: CommandSpec.hs  ParserSpec.hs  ParserTransRSpec.hs
test/Howdy/Comptime/: BotSpec.hs
