cabal-version:      3.6
name:               howdy
version:            0.1.0.2
synopsis:           A simple Discord bot framework built on discord-haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             kam
maintainer:         hello@techniworm.dev

-- A copyright notice.
-- copyright:
category:           Web
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
        -- Howdy.Parser
        -- Howdy.Context
        -- Howdy.Effects.Discord
        -- Howdy.Effects.Parse
        -- Howdy.Error
        Discord.Application.Command
        Discord.Application.Command.Request

    -- Modules included in this library but not exported.
    --other-modules:
        -- Howdy.Internal.Builder
        -- Howdy.Internal.Bot.Builder
        -- Howdy.Internal.Action.Builder
        -- Howdy.Internal.Error
        -- Howdy.Internal.Parser.Class
        -- Howdy.Internal.Parser.Cons
        -- Howdy.Internal.Parser.ConsR
        -- Howdy.Internal.Parser.Trans
        -- Howdy.Internal.Parser.TransR
        -- Howdy.Internal.Parser.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base                 ^>= 4.16.0.0
        , data-default         ^>= 0.7.1.1
        -- , discord-haskell      ^>= 1.8.1
        , mtl                  ^>= 2.2.2
        , text                 ^>= 1.2.4.1
        , unordered-containers ^>= 0.2.14.0
        , exceptions           ^>= 0.10.4
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings

test-suite howdy-spec
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    ghc-options:        -Wall
    main-is:            Spec.hs
    build-depends:    
          base              ^>= 4.14.0.0
        , hspec             ^>= 2.8.3
        , howdy
        , quickcheck-text   ^>= 0.1.2.1
        , text              ^>= 1.2.4.1
    other-modules:
          Howdy.ParserSpec
    default-extensions: OverloadedStrings
    build-tool-depends: hspec-discover:hspec-discover == 2.*