cabal-version:      3.0
name:               howdy
version:            0.1.0.2
synopsis:           A simple Discord bot framework built on discord-haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             kam
maintainer:         hello@techniworm.dev

-- A copyright notice.
-- copyright:
category:           Web
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
        --Howdy.Parser
        Howdy.Error
        Howdy.Secrets
        --Howdy.Bot
        --Howdy.Command
        --Howdy.Discord
        Control.Optics

    -- Modules included in this library but not exported.
    --other-modules:
        Howdy.Internal.Error
        Howdy.Internal.Parser.Class
        Howdy.Internal.Parser.Cons
        Howdy.Internal.Parser.ConsR
        Howdy.Internal.Parser.Trans
        Howdy.Internal.Parser.TransR
        Howdy.Internal.Parser.Types
        Howdy.Comptime.Command
        Howdy.Comptime.Bot
        Howdy.Internal.Bot.CommandManager
        Howdy.Internal.Bot.ReactionManager
        Howdy.Internal.Bot.Lifecycle
        Howdy.Internal.Debug
        Howdy.Internal.Discord
        Howdy.Comptime.Reaction

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base                 ^>= 4.16.0.0
        , data-default         ^>= 0.7.1.1
        , discord-haskell      ^>= 1.13.0
        , mtl
        , transformers
        , text
        , http-client ^>= 0.7.11
        , unordered-containers ^>= 0.2.17.0
        , exceptions
        , hashable
        , free                 ^>= 5.1.7
        , bytestring
        , aeson
        , optics ^>= 0.4.2
    hs-source-dirs:     src
    ghc-options:        -fllvm
    default-language:   Haskell2010
    default-extensions: OverloadedStrings, OverloadedRecordDot, DuplicateRecordFields, LambdaCase

test-suite howdy-spec
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    ghc-options:        -Wall
    main-is:            Spec.hs
    build-depends:    
          base              ^>= 4.16.0.0
        , hspec             ^>= 2.8.3
        , howdy
        , quickcheck-text   ^>= 0.1.2.1
        , discord-haskell
        , text
    other-modules:
          Howdy.ParserSpec
          Howdy.Examples.Api
    default-extensions: OverloadedStrings
    build-tool-depends: hspec-discover:hspec-discover == 2.*
